# Quick-Paste

./: .gitignore  AboutProject.md  HowToDo.md  README.md  package-lock.json  package.json  tailwind.config.js
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-02/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-04/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-05/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: features.js  fonts.css  index.html  main.js  style.backup.css  style.css  styles.css  suggestions.html  suggestions.js  text-expansion-panel.js  welcome.html  welcome.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_manager.rs  clipboard_monitor.rs  data_store.rs  keyboard_hook.rs  lib.rs  main.rs  text_expansion.rs
src/app/: models.js  tauri-gateway.js
src/assets/: tailwind.css
tests/: models.test.js
