[package]
name = "quickpaste"
version = "0.1.0"
description = "QuickPaste by Mamak Studio"
authors = ["Emir Han Mamak <mamakstudio@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
arboard = "3.6.1"
dirs = "6.0.0"
rfd = { version = "0.15.4", features = ["file-handle-inner"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
rand = "0.8.5"
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse"
] }
winreg = "0.55.0"
